--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.10+1
   iconsax: ^0.0.8
 
