--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,28 +4,38 @@ description: "A new Flutter project."
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-
 version: 1.0.0+1
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
-
 dependencies:
+  bloc: ^8.1.4
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
+  flutter_native_splash: ^2.4.0
   flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.10+1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   iconsax: ^0.0.8
 
 dev_dependencies:
-
-  
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+
+
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/Logo/Logo.png
+  android_12:
+    image: assets/Logo/Logo.png
+    color: "#ffffff"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -39,7 +49,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image/
-  
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
@@ -53,11 +63,9 @@ flutter:
     - family: font1
       fonts:
         - asset: assets/font/ArchitectsDaughter-Regular.ttf
-        
+
     - family: font2
       fonts:
         - asset: assets/font/Roboto-Regular.ttf
-       
-
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
