--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 # Dependencies specify other packages that your package needs in order to work.
 dependencies:
   bloc: ^8.1.4
+  build_runner: ^2.4.11
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
@@ -21,14 +22,15 @@ dependencies:
   flutter_svg: ^2.0.10+1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
   iconsax: ^0.0.8
+  intl: ^0.19.0
+  modal_progress_hud_nsn: ^0.5.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-
-
 
 flutter_native_splash:
   color: "#ffffff"
