--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   iconsax: ^0.0.8
   intl: ^0.19.0
   modal_progress_hud_nsn: ^0.5.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -34,10 +35,13 @@ dev_dependencies:
 
 flutter_native_splash:
   color: "#ffffff"
-  image: assets/Logo/Logo.png
+  image: assets/logo/splash_screen.png
+  color_dark: "#ffffff"
+  image_dark: assets/logo/splash_screen.png
   android_12:
-    image: assets/Logo/Logo.png
+    image: assets/logo/splash_screen.png
     color: "#ffffff"
+  web: false
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -51,6 +55,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image/
+    - assets/Logo/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
