--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   hive_generator: ^2.0.1
   iconsax: ^0.0.8
   intl: ^0.19.0
+  lottie: ^3.1.2
   modal_progress_hud_nsn: ^0.5.1
   shared_preferences: ^2.2.3
 
@@ -56,6 +57,7 @@ flutter:
   assets:
     - assets/image/
     - assets/Logo/
+    - assets/animation/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
